--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -8,6 +8,7 @@
     "watch": "vue-cli-service build --watch --mode development"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "core-js": "^3.8.3",
     "element-plus": "^2.4.1",
     "vue": "^3.2.13",
